# livebox_dashboard

./: .dockerignore  .gitignore  .gitlab-ci.yml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  package-lock.json
backend/: .gitignore  BACKEND.md  PLAN.md  generate_bruno.py  main.py  pydantic_to_ts.py  pyproject.toml
backend/bruno/: bruno.json
backend/bruno/DHCP/: Add Static Lease.bru  Assign From Pool.bru  Clear Stats.bru  Create Pool.bru  Delete Static Lease.bru  Get Dora Cycles.bru  Get Leases.bru  Get Pool.bru  Get Static Leases.bru  Renew Lease.bru  Set Lease Time.bru  Update Static Lease.bru
backend/bruno/Device/: Export.bru  Get Info.bru  Get Pairing.bru  Restore Extended.bru  Restore.bru  Update.bru
backend/bruno/Devices/: Add Name.bru  Clear Tag.bru  Destroy Device.bru  Fetch Device.bru  Find By Ip.bru  Find Devices.bru  Get Devices.bru  Get Parameters.bru  Get Topology.bru  Has Tag.bru  Remove Alternative.bru  Remove Name.bru  Remove Type.bru  Set Alternative.bru  Set Device.bru  Set Name.bru  Set Tag.bru  Set Type.bru
backend/bruno/DynDNS/: Add Host.bru  (+7 more)
backend/core/: auth.py  config.py  session.py
backend/models/: common.py  device.py  devices.py  dhcp.py  dyndns.py  firewall.py  lan.py  nmc.py  phone.py  system.py  wifi.py
backend/routers/: auth.py  device.py  devices.py  dhcp.py  dyndns.py  firewall.py  lan.py  nmc.py  phone.py  system.py  wifi.py  ws.py
backend/tests/: conftest.py  test_device.py  test_devices.py  test_dhcp.py  test_dyndns.py  test_firewall.py  test_lan.py  test_nmc.py  test_phone.py  test_system.py  test_wifi.py
(+193 files in other folders)
