[project]
name = "livebox-dashboard"
version = "0.1.0"
description = "RESTful CRUD wrapper for the Orange Livebox JSON-RPC API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.42.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.scripts]
serve = "uvicorn main:app --reload"
